[tool.poetry]
name = "2025-p1-rike568"
version = "0.1.0"
description = ""
authors = ["rike568 <140146232+rike568@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
